--- a/web/err.html
+++ b/web/err.html
@@ -12,8 +12,10 @@
     <script type="text/javascript">
         var _temp_ = document.getElementsByTagName("body")[0]["dataset"];
     	E.init({
-    		url:_temp_.api,//E.js把捕获到的异常信息提交到哪里(必填)
-    		name:_temp_.name,//商户名(可选)
+            bid:100022,
+            soid:103523,
+            uid:15611,
+    		url:_temp_.api//E.js把捕获到的异常信息提交到哪里(必填)
         });
         
         // try{
