--- a/web/err.html
+++ b/web/err.html
@@ -6,7 +6,7 @@
     	<!-- 推荐放在head，这样可以快速监听页面加载中的错误信息 -->
     	<script src="WebError.js"></script>
     </head>
-    <body data-api="http://192.168.85.105/log.gif">
+    <body data-api="https://st.yunlaimi.com/log.gif">
     
     <!-- 自定义参数，和初始化参数配置 -->
     <script type="text/javascript">
@@ -27,7 +27,7 @@
     </script>
 
     <script type="text/javascript">
-       战斗
+       ab&b你好
     </script>
 
     <!-- 防止跨域JS问题 返回HTTP头加  Access-Control-Allow-Origin:* -->
