--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     	<meta charset="UTF-8">
     	<title></title>
     	<!-- 推荐放在head，这样可以快速监听页面加载中的错误信息 -->
-    	<script src="WebError.js"></script>
+    	<script src="tracker.js"></script>
     </head>
     <body data-api="https://st.yunlaimi.com/log.gif">
     
@@ -15,7 +15,8 @@
             bid:100022,
             soid:103523,
             uid:15611,
-    		url:_temp_.api//E.js把捕获到的异常信息提交到哪里(必填)
+    		url:_temp_.api,//E.js把捕获到的异常信息提交到哪里(必填)
+            enabled:true //是否可用，关闭以后不再捕获和发送错误信息
         });
         
         // try{
