--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
     </script>
 
     <script type="text/javascript">
-       ab&b你好
+       abc
     </script>
 
     <!-- 防止跨域JS问题 返回HTTP头加  Access-Control-Allow-Origin:* -->
