--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     	<!-- 推荐放在head，这样可以快速监听页面加载中的错误信息 -->
     	<script src="tracker.js"></script>
     </head>
-    <body data-api="https://st.yunlaimi.com/log.gif">
+    <body data-api="https://st.dailaimi.com/log.gif">
     
     <!-- 自定义参数，和初始化参数配置 -->
     <script type="text/javascript">
@@ -28,6 +28,7 @@
     </script>
 
     <script type="text/javascript">
+      uuyqy
     </script>
 
     <!-- 防止跨域JS问题 返回HTTP头加  Access-Control-Allow-Origin:* -->
